Bug 913155 - Electrolysis: Add a submit crashreport box on the tab crashed page. r=felipe,smaug